--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -327,7 +327,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -620,7 +619,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -913,7 +911,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -1206,7 +1203,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -1775,7 +1771,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -2140,7 +2135,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -2462,7 +2456,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -2949,7 +2942,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -2967,6 +2959,7 @@ fra:
         base-calving_one: "Vêlage unique"
         base-calving_twin: "Vêlage jumeaux"
         base-chaptalization: "Chaptalisation"
+        base-complete_wine_transfer: "Transfert de vin (Complet)"
         base-direct_silage: "Ensilage direct"
         base-fuel_up: "Plein de carburant"
         base-grains_harvest: "Moisson"
@@ -2982,7 +2975,7 @@ fra:
         base-mineral_fertilizing: "Fertilisation minérale"
         base-oil_replacement: "Vidange d'huile"
         base-organic_fertilizing: "Fertilisation organique"
-        base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
+        base-partial_wine_transfer: "Transfert de vin (Partiel)"
         base-pasturing: "Pâturage"
         base-plant_grinding: "Broyage de végétaux"
         base-plant_mowing: "Fauchage"
@@ -2997,7 +2990,6 @@ fra:
         base-uncompacting: "Décompactage"
         base-wheat_crop: "Culture de blé (standard)"
         base-wine_blending: "Assemblage de vin"
-        base-wine_transfer: "Transfert de vin"
     intervention_cast:
 
     issue:
@@ -3301,7 +3293,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -3594,7 +3585,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -4029,7 +4019,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -4322,7 +4311,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -4673,7 +4661,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -4966,7 +4953,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -5259,7 +5245,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -5551,7 +5536,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -5844,7 +5828,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -6137,7 +6120,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -6543,7 +6525,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -6869,7 +6850,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -7161,7 +7141,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
@@ -7666,7 +7645,6 @@ fra:
         walnut: "Noyer"
         water: "Eau"
         wine: "Vin"
-        wine_coproduct: "Co-produit du vin"
         worker: "Travailleur"
         zea: "Maïs"
         zea_aallexia: "Zea - aallexia"
