--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -368,6 +368,7 @@ arb:
       # edit: "Modifier l’intervention %{procedure_name} N°%{id}"
       # index: "Interventions"
       # new: "Nouvelle intervention"
+      # run: "Exécuter l'intervention"
       # show: "%{procedure_name} N°%{id}"
     backend/inventories:
       edit: "تعديل الجرد"
@@ -778,7 +779,8 @@ arb:
     backend/trackings:  #?
       show: "الحصة %{name}" #?
     backend/transfers: #?
-    backend/transformed_products: #?
+    backend/transformed_products:
+      # index: "Produits transformés"
     backend/transports:
       deliveries: "تسليم وسيلة النقل"
       # delivery_delete: "Retirer la livraison du transport"
@@ -799,7 +801,8 @@ arb:
       statistics: "احصائياتي" #?
       # unlock: "Déverrouiller l’utilisateur"
     backend/vegetals: #?
-    backend/wine_tanks: #?
+    backend/wine_tanks:
+      # index: "Cuverie"
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
@@ -820,7 +823,10 @@ arb:
     # backend/activities: "Activités"
     # backend/affairs: "Affaires"
     # backend/aggregators: "Agrégateurs"
+    # backend/analyses: "Analyses"
+    # backend/animal_foods: "Aliments pour animaux"
     # backend/animal_groups: "Groupes d’animaux"
+    # backend/animal_products: "Produits animaux"
     # backend/animals: "Animaux"
     backend/application: "تطبيق" #?
     backend/areas: "العناوين البريد" #?
@@ -861,6 +867,8 @@ arb:
     backend/incoming_payment_modes: "طرق تسديد الدفعات"
     backend/incoming_payments: "الدفعات"
     # backend/interfacers: "Interfaceurs"
+    # backend/intervention_casts: "Acteurs d'intervention"
+    # backend/interventions: "Interventions"
     backend/inventories: "الجرد"
     # backend/inventory_items: "Lignes d’inventaires"
     # backend/issues: "Incidents"
@@ -1385,6 +1393,7 @@ arb:
     international_reduce_vat_collected: "معدل ضريبة القيمة المضافة الدولية المخفضة %2.1"
     international_vat_collected: "مجموع ضريبة القيمة المضافة الدولية"
     interval: "المدة الزمنية المخصصة"
+    # intervention_casts: "Actions dans les interventions"
     # inventories: "Inventaires"
     inventory: "عدل الجرد"
     inventory_create: "تأدية عملية جرد جديدة" #?
@@ -1967,6 +1976,8 @@ arb:
     # tp_index: "Index génétique Taux protéïque"
     tracking: "المسار"
     transfer: "اجراء النقل"
+    # transformations: "Transformations"
+    # transformed_products: "Produits transformés"
     # transport: "Transport"
     transport_create: "اضافة وسيلة نقل جديدة" #?
     transport_deliveries: "تسليم وسائل النقل"
@@ -2040,6 +2051,7 @@ arb:
     virtual_quantity: "الكمية العملية"
     waiting: "أ€ التسدسد لاحقا" #?
     # wind_speed: "Vitesse du vent"
+    # wine_tanks: "Cuverie"
     # with_financial_assets_depreciations: "Inclure les amortissements des immobilisations"
     with_prints: "(وتشمل الطباعة (الفواتير والاوامر"
     x_cashes:
