--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1158,8 +1158,10 @@ arb:
     # content_indicator: "Content indicator"
     # content_indicator_name: "Content indicator name"
     # content_indicator_unit: "Content indicator unit"
+    # content_localizations: "Content localizations"
     # content_maximal_quantity: "Content maximal quantity"
     # content_nature: "Content nature"
+    # contents: "Contents"
     # contour: "Silhouette"
     # coordinate: "Coordonnée"
     counterpart: "النسخة المطابقة" #?
