--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -749,8 +749,10 @@ eng:
     # content_indicator: "Content indicator"
     # content_indicator_name: "Content indicator name"
     # content_indicator_unit: "Content indicator unit"
+    # content_localizations: "Content localizations"
     # content_maximal_quantity: "Content maximal quantity"
     # content_nature: "Content nature"
+    # contents: "Contents"
     # contour: "Silhouette"
     conveyors: "Conveyors" #?
     coordinate: "Coordinate"
