--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -319,7 +319,7 @@ fra:
       edit: "Modifier l’intervention %{procedure_name} N°%{id}"
       index: "Interventions"
       new: "Nouvelle intervention"
-      # run: "Run backend/intervention"
+      run: "Exécuter l'intervention"
       show: "%{procedure_name} N°%{id}"
     backend/inventories:
       edit: "Modifier l’inventaire"
@@ -640,7 +640,7 @@ fra:
       new: "Nouvelle équipe"
       show: "Équipe\_: %{name}" #?
     backend/transformed_products:
-      # index: "Index backend/transformed product"
+      index: "Produits transformés"
     backend/transports:
       deliveries: "Livraisons du transport" #?
       delivery_delete: "Retirer la livraison du transport" #?
@@ -656,7 +656,7 @@ fra:
       show: "Utilisateur\_: %{first_name} %{last_name}"
       unlock: "Déverrouiller l’utilisateur"
     backend/wine_tanks:
-      # index: "Index backend/wine tank"
+      index: "Cuverie"
     backend/workers:
       edit: "Modifier l’équipier %{name}"
       index: "Équipiers"
@@ -688,12 +688,12 @@ fra:
     backend/activities: "Activités"
     backend/affairs: "Affaires"
     backend/aggregators: "Agrégateurs"
-    # backend/analyses: "Backend/analyses"
+    backend/analyses: "Analyses"
     # backend/analytic_distributions: "Backend/analytic distributions"
-    # backend/animal_foods: "Backend/animal foods"
+    backend/animal_foods: "Aliments pour animaux"
     backend/animal_groups: "Groupes d’animaux"
     # backend/animal_medicines: "Backend/animal medicines"
-    # backend/animal_products: "Backend/animal products"
+    backend/animal_products: "Produits animaux"
     backend/animals: "Animaux"
     backend/bank_statements: "Relevés de compte bancaire"
     # backend/building_divisions: "Backend/building divisions"
@@ -761,8 +761,8 @@ fra:
     backend/incoming_payment_modes: "Modes d’encaissement"
     backend/incoming_payments: "Encaissements"
     backend/interfacers: "Interfaceurs"
-    # backend/intervention_casts: "Backend/intervention casts"
-    # backend/interventions: "Backend/interventions"
+    backend/intervention_casts: "Acteurs d'intervention"
+    backend/interventions: "Interventions"
     backend/inventories: "Inventaires"
     backend/inventory_items: "Lignes d’inventaires"
     backend/issues: "Incidents"
@@ -1251,6 +1251,7 @@ fra:
     international_reduce_vat_collected: "Taux réduit à 2,1%"
     international_vat_collected: "Opérations réalisées dans les DOM"
     interval: "Intervalle personnalisé"
+    intervention_casts: "Actions dans les interventions"
     inventories: "Inventaires"
     inventory: "Inventaire"
     inventory_print: "Imprimer l’inventaire"
@@ -1740,6 +1741,8 @@ fra:
     tp_index: "Index génétique Taux protéïque"
     tracking: "Lot"
     transfer: "Effectuer les transferts"
+    transformations: "Transformations"
+    transformed_products: "Produits transformés"
     transport: "Transport"
     transport_deliveries: "Livraisons du transport"
     transport_states:
@@ -1802,6 +1805,7 @@ fra:
       resized: "Mode «\_Tout à l’écran\_»"
     virtual_quantity: "Quantité virtuelle"
     wind_speed: "Vitesse du vent"
+    wine_tanks: "Cuverie"
     with_financial_assets_depreciations: "Inclure les amortissements des immobilisations"
     with_prints: "Inclure les impressions (factures, commandes…)"
     x_cashes:
