--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -527,8 +527,10 @@ fra:
     content_indicator: "Content indicator" #?
     content_indicator_name: "Content indicator name" #?
     content_indicator_unit: "Content indicator unit" #?
+    content_localizations: "Content localizations"
     content_maximal_quantity: "Content maximal quantity" #?
     content_nature: "Content nature" #?
+    contents: "Contents"
     contour: "Silhouette" #?
     coordinate: "Coordonnée"
     # coordinate_columns: "Coordinate columns"
