--- a/config/locales/fra/procedures.yml
+++ b/config/locales/fra/procedures.yml
@@ -46,6 +46,7 @@ fra:
     cropper: "Moissonneuse batteuse"
     cropper_driver: "Conducteur de moissonneuse batteuse"
     cultivation: "Culture"
+    destination_tank: "Cuve de destination"
     driver: "Conducteur"
     excrement_zone: "Fumière"
     fertilizer: "Engrais"
@@ -126,6 +127,7 @@ fra:
     base-calving_one: "Vêlage unique"
     base-calving_twin: "Vêlage jumeaux"
     base-chaptalization: "Chaptalisation"
+    base-complete_wine_transfer: "Transfert de vin (Complet)"
     base-direct_silage: "Ensilage direct"
     base-fuel_up: "Plein de carburant"
     base-grains_harvest: "Moisson"
@@ -141,7 +143,7 @@ fra:
     base-mineral_fertilizing: "Fertilisation minérale"
     base-oil_replacement: "Vidange d'huile"
     base-organic_fertilizing: "Fertilisation organique"
-    base-partial_spraying_on_cultivation: "Pulvérisation sur culture partielle"
+    base-partial_wine_transfer: "Transfert de vin (Partiel)"
     base-pasturing: "Pâturage"
     base-plant_grinding: "Broyage de végétaux"
     base-plant_mowing: "Fauchage"
@@ -156,4 +158,3 @@ fra:
     base-uncompacting: "Décompactage"
     base-wheat_crop: "Culture de blé (standard)"
     base-wine_blending: "Assemblage de vin"
-    base-wine_transfer: "Transfert de vin"
