--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -349,6 +349,7 @@ spa:
       # edit: "Modifier l’intervention %{procedure_name} N°%{id}"
       # index: "Interventions"
       # new: "Nouvelle intervention"
+      # run: "Exécuter l'intervention"
       # show: "%{procedure_name} N°%{id}"
     backend/inventories:
       edit: "Modificacion del inventario"
@@ -701,7 +702,8 @@ spa:
     backend/tracking_states: #?
     backend/trackings: #?
     backend/transfers: #?
-    backend/transformed_products: #?
+    backend/transformed_products:
+      # index: "Produits transformés"
     backend/transports:
       # deliveries: "Livraisons du transport"
       # delivery_delete: "Retirer la livraison du transport"
@@ -722,7 +724,8 @@ spa:
       statistics: "Mis estadisticas" #?
       # unlock: "Déverrouiller l’utilisateur"
     backend/vegetals: #?
-    backend/wine_tanks: #?
+    backend/wine_tanks:
+      # index: "Cuverie"
     backend/workers:
       # edit: "Modifier l’équipier %{name}"
       # index: "Équipiers"
@@ -743,7 +746,10 @@ spa:
     # backend/activities: "Activités"
     # backend/affairs: "Affaires"
     # backend/aggregators: "Agrégateurs"
+    # backend/analyses: "Analyses"
+    # backend/animal_foods: "Aliments pour animaux"
     # backend/animal_groups: "Groupes d’animaux"
+    # backend/animal_products: "Produits animaux"
     # backend/animals: "Animaux"
     backend/application: "Aplicación" #?
     backend/bank_statements: "Levantar de cuntos bancarios"
@@ -776,6 +782,8 @@ spa:
     # backend/incoming_payment_modes: "Modes d’encaissement"
     # backend/incoming_payments: "Encaissements"
     # backend/interfacers: "Interfaceurs"
+    # backend/intervention_casts: "Acteurs d'intervention"
+    # backend/interventions: "Interventions"
     backend/inventories: "Inventarios"
     # backend/inventory_items: "Lignes d’inventaires"
     # backend/issues: "Incidents"
@@ -1258,6 +1266,7 @@ spa:
     international_reduce_vat_collected: "Tasa réducida a 2,1%"
     international_vat_collected: "Operación realisada en los DOM"
     interval: "Intervalo personalisado"
+    # intervention_casts: "Actions dans les interventions"
     # inventories: "Inventaires"
     inventory: "Completar el inventario"
     inventory_create: "Hacer un nuevo inventario" #?
@@ -1775,6 +1784,8 @@ spa:
     # tp_index: "Index génétique Taux protéïque"
     # tracking: "Lot"
     # transfer: "Effectuer les transferts"
+    # transformations: "Transformations"
+    # transformed_products: "Produits transformés"
     # transport: "Transport"
     # transport_deliveries: "Livraisons du transport"
     transport_states:
@@ -1841,6 +1852,7 @@ spa:
       # resized: "Mode «\_Tout à l’écran\_»"
     # virtual_quantity: "Quantité virtuelle"
     # wind_speed: "Vitesse du vent"
+    # wine_tanks: "Cuverie"
     # with_financial_assets_depreciations: "Inclure les amortissements des immobilisations"
     with_prints: "Incluir las impresiones (facturas, encargos...)"
     x_cashes:
