--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -724,6 +724,7 @@ fra:
     in_cash: "En espèce" #?
     included: "Incluse"
     incoming_deliveries: "Approvisionnements"
+    incoming_delivery_item: "Incoming delivery item"
     incoming_delivery_items: "Éléments d’approvisionnement"
     incoming_payment_modes: "Modes d’encaissement"
     incoming_payments: "Encaissements"
