--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -3,12 +3,15 @@ jpn:
   nomenclatures:
     abilities:
       items:
+        # acidify: "Acidifier"
+        # alkalinize: "Alcaliniser"
         # blow: "Souffler"
         # bunch: "Boteller"
         # care: "Soigner"
         # catalyze: "Catalyser"
         # catch: "Atteler"
         # chaptelise: "Chaptaliser"
+        # clarify: "Clarifier"
         # clean: "Nettoyer"
         # consume: "Consommer"
         # cut: "Couper"
@@ -1586,13 +1589,21 @@ jpn:
       # name: "États de la reproduction mammifère"
     molecules:
       items:
+        # calcium_carbonate: "Carbonate de calcium "
         # copper_sulfate: "Sulfate de cuivre (Ⅰ)"
         # dicopper_sulfate: "Sulfate de cuivre (Ⅱ)"
         # dinitrogen: "Diazote"
+        # diphosphorus_pentoxide: "Diphosphorus pentoxide"
         # glucose: "Glucose"
+        # lactic_acid: "Acide lactique "
+        # malic_acid: "Acide malique"
         # phosphate: "Phosphate"
         # potash: "Potasse"
+        # potassium_bicarbonate: "Bicarbonate de potassium"
+        # potassium_ferrocyanide: "Ferrocyanide de potassium"
         # sodium_chloride: "Chlorure de sodium"
+        # sucrose: "Sucrose"
+        # tetraphosphorus_decoxide: "Tetraphosphorus decoxide"
       # name: "Molécules"
       property_natures:
         # formula: "Formule"
@@ -1904,6 +1915,7 @@ jpn:
         # bulk_kg_animal_food: "Aliment en vrac (kg)"
         # bulk_urea_46: "Engrais Urée 46% VRAC"
         # bulk_wheat_straw: "Paille de blé en vrac"
+        # calcium_carbonate_25kg: "Carbonate de calcium - 25kg"
         # calf: "Veau"
         # caphorn_wheat_crop: "Culture de blé tendre Caphorn"
         # caphorn_wheat_seed_25: "Semence de blé tendre Caphorn"
@@ -1917,6 +1929,7 @@ jpn:
         # cereals_feed_bag_25: "Aliments céréales - sac de 25 kg"
         # chemical_fertilizer_division: "Emplacement de stockage des engrais"
         # complete_herbicide: "Herbicide total"
+        # concrete_tank: "Cuve béton"
         # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
         # coop:aviator_xpro_5l: "Aviator xpro 5l"
         # coop:avoine_d'hiver_une_de_mai_red_25kg: "Semence d'avoine d'hiver une de mai - sac de 25kg"
@@ -1973,6 +1986,7 @@ jpn:
         # female_adult_cow: "Vache"
         # female_hen_band: "Bande de poule"
         # female_young_cow: "Génisse"
+        # fiberglass_tank: "Cuve en fibre de verre"
         # fig_crop: "Culture de figuier"
         # fig_seedling: "Plant de figuier"
         # food_equipment_division: "Zone de stockage des aliments et du matériels"
@@ -2019,6 +2033,7 @@ jpn:
         # implanter: "Planteuse"
         # insecticide: "Insecticide"
         # irrigation_water: "Eau (irrigation)"
+        # lactic_acid_25kg: "Acide lactique - 25kg"
         # land_parcel: "Parcelle"
         # land_parcel_cluster: "Îlot"
         # lavender_crop: "Culture de lavande"
@@ -2030,6 +2045,7 @@ jpn:
         # male_adult_cow: "Taureau"
         # male_hen_band: "Bande de poulet"
         # male_young_cow: "Taurillon"
+        # malic_acid_25kg: "Acide malique - 25kg"
         # manager: "Responsable"
         # manual_implanter: "Plantoir"
         # manure_division: "Fumière"
@@ -2074,6 +2090,9 @@ jpn:
         # plum_seedling: "Plant de prunier"
         # poaceae_fungicide: "Fongicide céréales/graminées"
         # poaceae_herbicide: "Herbicide céréales/graminées"
+        # polyester_tank: "Cuve en polyester"
+        # potassium_bicarbonate_25kg: "Bicarbonate de potassium - 25kg"
+        # potassium_ferrocyanide_25kg: "Ferrocyanide de potassium - 25kg"
         # potato_crop: "Culture de pomme de terre"
         # pruning_platform: "plate-forme de taille"
         # rabbit_manure: "Fumier de lapin"
@@ -2115,6 +2134,7 @@ jpn:
         # spring_barley_crop: "Culture d’orge de printemps"
         # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         # spring_oat_crop: "Culture d’avoine de printemps"
+        # stainless_steel_tank: "Cuve en acier inox"
         # strawberry_crop: "Culture de fraisier"
         # strawberry_seedling: "Plant de fraisier"
         # subsoil_plow: "Sous soleuse"
@@ -2133,7 +2153,8 @@ jpn:
         # urban_compost: "Compost urbain"
         # vine_grape_berry: "Grappe de raisin"
         # vine_grape_crop: "Culture de vigne"
-        # vine_grape_must: "Mout de raisin"
+        # vine_grape_juice: "Jus de raisin"
+        # vine_grape_must: "Moût de raisin"
         # vine_residu: "Co-produit du raisin"
         # walnut_crop: "Culture de noyer"
         # wheat_crop: "Culture de blé"
@@ -2142,6 +2163,7 @@ jpn:
         # wheat_straw_big_rectangular_bales: "Botte de paille de blé - botte grand format"
         # wheat_straw_round_bales: "Botte de paille de blé - balle ronde"
         # wheat_straw_small_rectangular_bales: "Botte de paille de blé - botte petit format"
+        # white_sugar_25kg: "Sucre blanc - 25kg"
         # wine: "Vin"
         # wine_press: "Pressoir"
         # wine_vinasse: "Vinasse de distillerie"
@@ -2179,6 +2201,7 @@ jpn:
         # cattle_herd: "Troupeau de bovins"
         # cereal_crop: "Culture de céréales"
         # chemical_fertilizer: "Engrais minéral"
+        # clarification_solution: "Solution clarifiante"
         # complete_sower: "Semoir équipé"
         # crop: "Culture"
         # cultivable_zone: "Zone cultivable"
@@ -2190,6 +2213,7 @@ jpn:
         # female_adult_cattle_herd: "Troupeau de vaches"
         # female_adult_cow: "Vache"
         # female_young_cow: "Génisse"
+        # fermented_grape_juice: "Jus fermenté de raisin"
         # fertilizer_division: "Zone de stockage des engrais"
         # flower_crop: "Culture florale"
         # food_distributor: "Matériel de distribution d’aliments"
@@ -2207,6 +2231,7 @@ jpn:
         # grain: "Céréale"
         # grain_crop: "Culture à graines"
         # grape: "Raisin"
+        # grape_juice: "Jus de raisin"
         # grape_reaper: "Machine à vendanger"
         # grass: "Herbe"
         # hay_rake: "Andaineur"
@@ -2262,6 +2287,7 @@ jpn:
         # spreader: "Épandeur à engrais"
         # spreader_trailer: "Épandeur à fumier"
         # straw: "Paille"
+        # sugar: "Sucre"
         # superficial_plow: "Déchaumeuse"
         # technician: "Technicien"
         # tractor: "Tracteur"
@@ -2269,6 +2295,8 @@ jpn:
         # usual_vine_seedling: "Plant de vigne traditionnel"
         # walnut_crop: "Culture d’arbre à coques"
         # wine: "Vin"
+        # wine_acidifying: "Acidifiant (vin)"
+        # wine_alkalinizing: "Alcalinisant (vin)"
         # wine_crop: "Vigne"
         # wine_press: "Pressoir (vin)"
         # wine_tank: "Cuve à vin"
@@ -2574,6 +2602,7 @@ jpn:
         # cichorium: "Chicoré"
         # cleaner: "Rabot"
         # compost: "Compost"
+        # concentrated_rectified_must: "Moût concentré rectifié"
         # corabel: "Corabel"
         # corylus: "Corylus"
         # corylus_avellana: "Corylus avellana"
@@ -2595,6 +2624,7 @@ jpn:
         # fabaceae: "Fabaceae"
         # fercoril_corabel: "Fercoril corabel"
         # feriale: "Feriale"
+        # fermented_juice: "Jus fermenté"
         # fertile_coutard: "Fertile coutard"
         # ficus: "Ficus"
         # ficus_carica: "Ficus carica"
@@ -2681,6 +2711,8 @@ jpn:
         # poa: "Prairie"
         # poaceae: "Graminée"
         # pollen: "Pollen"
+        # pomace: "Résidu (Tourteau, Marc)"
+        # potassium_ferrocyanide: "Ferrocyanure de potassium"
         # preparation: "Préparation"
         # press: "Pressoir"
         # product: "Produit"
@@ -2729,6 +2761,7 @@ jpn:
         # saccharomyces_cerevisiae: "Saccharomyces cerevisiae"
         # saccharomyces_cerevisiae_jb3: "Saccharomyces cerevisiae - jb3"
         # saccharomycetaceae: "Saccharomycetaceae"
+        # saccharose: "Saccharose"
         # salmo: "Salmonidé"
         # salt: "Sel"
         # sand: "Sable"
@@ -2742,12 +2775,15 @@ jpn:
         # slurry: "Lisier"
         # solanaceae: "Solanaceae"
         # solanum: "Pomme de terre"
+        # solanum_tuberosum: "Solanum tuberosum"
+        # solanum_tuberosum_agata: "Solanum tuberosum - Agata"
         # sorghum: "Sorgho"
         # sower: "Semoir"
         # sprayer: "Pulvérisateur"
         # spreader: "Épandeur"
         # straw: "Paille"
         # sub_zone: "Sous zone"
+        # sugar: "Sucre"
         # sus: "Porcin"
         # tank: "Réservoir"
         # tonda_giffoni: "Tonda giffoni"
@@ -2840,5 +2876,9 @@ jpn:
     varieties-plant: #?
     varieties-poaceae: #?
     varieties-triticum_aestivum: #?
+    working_sets:
+      items:
+        # oenological_regulateds: "Produits oenologiques détenus"
+      property_natures: #?
   procedures: #?
   variables: #?
