--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -692,8 +692,11 @@ eng:
       # index: "Équipes"
       # new: "Nouvelle équipe"
       # show: "Équipe\_: %{name}"
-    backend/trackings:  #?
-      show: "Tracking: %{name}" #?
+    backend/trackings:
+      # edit: "Modifier le numéro de suivi\_: %{name} - %{serial}"
+      # index: "Numéros de suivi"
+      # new: "Nouveau numéro de suivi"
+      show: "Tracking: %{name}"
     backend/transformed_products:
       # index: "Produits transformés"
     backend/transports:
