--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -639,6 +639,11 @@ fra:
       index: "Équipes"
       new: "Nouvelle équipe"
       show: "Équipe\_: %{name}" #?
+    backend/trackings:
+      edit: "Modifier le numéro de suivi\_: %{name} - %{serial}"
+      index: "Numéros de suivi"
+      new: "Nouveau numéro de suivi"
+      show: "Numéro de suivi\_: %{name} - %{serial}"
     backend/transformed_products:
       index: "Produits transformés"
     backend/transports:
