--- a/config/locales/spa/nomenclatures.yml
+++ b/config/locales/spa/nomenclatures.yml
@@ -1210,6 +1210,7 @@ spa:
         # trial_balance: "Balance comptable"
         # veterinary_booklet: "Carnet vétérinaire"
         # vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
+        # wine_detention_registry: "Registre de détention - Vin"
       # name: "Types de documents"
       property_natures:
         # category: "Catégories"
@@ -1324,6 +1325,7 @@ spa:
         # animal_life_state: "Phase du bioprocessus de vie d’un animal"
         # application_width: "Largeur de travail"
         # available_water_capacity_per_area: "Réserve utile d’eau (RU)"
+        # best_before_period: "Période de consommation 'de préférence'"
         # boron_concentration: "Teneur en Bore"
         # calcium_concentration: "Teneur en Calcium"
         # calving_ease_index: "Index de facilité de naissance"
@@ -1333,6 +1335,7 @@ spa:
         # cells_mass_concentration: "Concentration massique en cellules actives"
         # certification: "Certification"
         # clostridial_spores_concentration: "Concentration en spores butyriques"
+        # consumption_period: "Période de consommation 'limite'"
         # copper_concentration: "Teneur en cuivre"
         # dry_matter_rate: "Taux de matière sèche"
         # easement_area: "Emprise au sol"
@@ -2698,11 +2701,14 @@ spa:
         # ostreidae: "Ostreidae"
         # ovis: "Ovin"
         # pauetet: "Pauetet"
+        # peach: "Pêche"
+        # pear: "Poire"
         # phaseolus: "Haricot"
         # pisum: "Pisum"
         # plant: "Végétal"
         # plant_medicine: "Produit phytosanitaire"
         # plower: "Charrue"
+        # plum: "Prune"
         # poa: "Prairie"
         # poaceae: "Graminée"
         # pollen: "Pollen"
@@ -2716,6 +2722,9 @@ spa:
         # pruner: "Sécateur"
         # prunus: "Prunier"
         # prunus_domestica: "Prunus domestica"
+        # prunus_domestica_bernardina: "Prunus domestica - Bernardina"
+        # prunus_domestica_bluefre: "Prunus domestica - Bluefre"
+        # prunus_domestica_carpatin: "Prunus domestica - Carpatin"
         # prunus_persica: "Prunus persica"
         # prunus_persica_jh_hall: "Prunus persica - JH hall"
         # prunus_persica_madeleine: "Prunus persica - Madeleine"
@@ -2725,14 +2734,12 @@ spa:
         # prunus_salicina_anne_gold: "Prunus salicina - Anne gold"
         # prunus_salicina_awaso: "Prunus salicina - Awaso"
         # prunus_salicina_beauty: "Prunus salicina - Beauty"
-        # prunus_salicina_bernardina: "Prunus salicina - Bernardina"
-        # prunus_salicina_bluefre: "Prunus salicina - Bluefre"
-        # prunus_salicina_carpatin: "Prunus salicina - Carpatin"
         # pyrus: "Pyrus"
         # pyrus_communis: "Pyrus communis"
         # pyrus_communis_beurre_hardy: "Pyrus communis - Beurre hardy"
         # pyrus_communis_william: "Pyrus communis - William"
         # pyrus_communis_william_bon_chretien: "Pyrus communis - William bon chretien"
+        # raspberry: "Framboise"
         # reaper: "Moissonneuse-batteuse"
         # ribes: "Ribes"
         # ribes_nigrum: "Ribes nigrum"
@@ -2777,6 +2784,7 @@ spa:
         # sprayer: "Pulvérisateur"
         # spreader: "Épandeur"
         # straw: "Paille"
+        # strawberry: "Fraise"
         # sub_zone: "Sous zone"
         # sugar: "Sucre"
         # sus: "Porcin"
@@ -2874,6 +2882,8 @@ spa:
     working_sets:
       items:
         # oenological_regulateds: "Produits oenologiques détenus"
-      property_natures: #?
+      # name: "Ensemble de produits"
+      property_natures:
+        # expression: "Expression"
   procedures: #?
   variables: #?
