--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1111,7 +1111,7 @@ fra:
         trial_balance: "Balance comptable"
         veterinary_booklet: "Carnet vétérinaire"
         vine_phytosanitary_registry: "Registre phytosanitaire - Vigne"
-        # wine_detention_registry: "Wine detention registry"
+        wine_detention_registry: "Registre de détention - Vin"
     entity_link_natures:
       name: "Types de liens sociaux"
       property_natures:
@@ -1230,6 +1230,7 @@ fra:
         animal_life_state: "Phase du bioprocessus de vie d’un animal"
         application_width: "Largeur de travail"
         available_water_capacity_per_area: "Réserve utile d’eau (RU)"
+        best_before_period: "Période de consommation 'de préférence'"
         boron_concentration: "Teneur en Bore"
         calcium_concentration: "Teneur en Calcium"
         calving_ease_index: "Index de facilité de naissance"
@@ -1239,6 +1240,7 @@ fra:
         cells_mass_concentration: "Concentration massique en cellules actives"
         certification: "Certification"
         clostridial_spores_concentration: "Concentration en spores butyriques"
+        consumption_period: "Période de consommation 'limite'"
         copper_concentration: "Teneur en cuivre"
         dry_matter_rate: "Taux de matière sèche"
         easement_area: "Emprise au sol"
@@ -2614,11 +2616,14 @@ fra:
         ostreidae: "Ostreidae"                             # mollusca
         ovis: "Ovin"                                       # mammalia
         pauetet: "Pauetet"                                 # corylus_avellana
+        peach: "Pêche"                                     # fruit
+        pear: "Poire"                                      # fruit
         phaseolus: "Haricot"                               # fabaceae
         pisum: "Pisum"                                     # fabaceae
         plant: "Végétal"                                   # bioproduct
         plant_medicine: "Produit phytosanitaire"           # medicine
         plower: "Charrue"                                  # equipment
+        plum: "Prune"                                      # fruit
         poa: "Prairie"                                     # poaceae
         poaceae: "Graminée"                                # plant
         pollen: "Pollen"                                   # organic_matter
@@ -2632,6 +2637,9 @@ fra:
         pruner: "Sécateur"                                 # equipment
         prunus: "Prunier"                                  # rosaceae
         prunus_domestica: "Prunus domestica"               # prunus
+        prunus_domestica_bernardina: "Prunus domestica - Bernardina" # prunus_domestica
+        prunus_domestica_bluefre: "Prunus domestica - Bluefre" # prunus_domestica
+        prunus_domestica_carpatin: "Prunus domestica - Carpatin" # prunus_domestica
         prunus_persica: "Prunus persica"                   # prunus
         prunus_persica_jh_hall: "Prunus persica - JH hall" # prunus_persica
         prunus_persica_madeleine: "Prunus persica - Madeleine" # prunus_persica
@@ -2641,14 +2649,12 @@ fra:
         prunus_salicina_anne_gold: "Prunus salicina - Anne gold" # prunus_salicina
         prunus_salicina_awaso: "Prunus salicina - Awaso"   # prunus_salicina
         prunus_salicina_beauty: "Prunus salicina - Beauty" # prunus_salicina
-        prunus_salicina_bernardina: "Prunus salicina - Bernardina" # prunus_domestica
-        prunus_salicina_bluefre: "Prunus salicina - Bluefre" # prunus_domestica
-        prunus_salicina_carpatin: "Prunus salicina - Carpatin" # prunus_domestica
         pyrus: "Pyrus"                                     # rosaceae
         pyrus_communis: "Pyrus communis"                   # pyrus
         pyrus_communis_beurre_hardy: "Pyrus communis - Beurre hardy" # pyrus_communis
         pyrus_communis_william: "Pyrus communis - William" # pyrus_communis
         pyrus_communis_william_bon_chretien: "Pyrus communis - William bon chretien" # pyrus_communis
+        raspberry: "Framboise"                             # fruit
         reaper: "Moissonneuse-batteuse"                    # equipment
         ribes: "Ribes"                                     # grossulariaceae
         ribes_nigrum: "Ribes nigrum"                       # ribes
@@ -2693,6 +2699,7 @@ fra:
         sprayer: "Pulvérisateur"                           # equipment
         spreader: "Épandeur"                               # equipment
         straw: "Paille"                                    # grass
+        strawberry: "Fraise"                               # fruit
         sub_zone: "Sous zone"                              # zone
         sugar: "Sucre"                                     # organic_matter
         sus: "Porcin"                                      # mammalia
@@ -2777,8 +2784,8 @@ fra:
         zone: "Zone physique"                              # matter
         zone_property_title: "Titre de propriété terrienne" # property_title
     working_sets:
-      # name: "Working sets"
+      name: "Ensemble de produits"
       property_natures:
-        # expression: "Expression"
+        expression: "Expression"
       items:
         oenological_regulateds: "Produits oenologiques détenus"
