--- a/config/locales/spa/devise.views.yml
+++ b/config/locales/spa/devise.views.yml
@@ -13,7 +13,7 @@ spa:
         # action: "Changer mon mot de passe"
         # greeting: "Bonjour %{recipient}!"
         # instruction: "Quelqu’un a demandé un lien pour changer votre mot de passe, le voici :"
-        # instruction_2: "Si vous n’avez pas émis cette demande, merci d’ignore cet email."
+        # instruction_2: "Si vous n’avez pas émis cette demande, merci d’ignorer cet email."
         # instruction_3: "Votre mot de passe ne changera pas tant que vous n’aurez pas cliqué sur ce lien et renseigné un nouveau mot de passe."
         # subject: "Instructions pour réinitialiser votre mot de passe"
       unlock_instructions:
